// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`priceContract high tier (score >= 800) — 9% fee 1`] = `
{
  "availableGuaranteeCents": 3000000,
  "feeCents": 9000,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 100000,
}
`;

exports[`priceContract medium tier (600-799) — 12% fee, with condo 1`] = `
{
  "availableGuaranteeCents": 6000000,
  "feeCents": 24000,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 215000,
}
`;

exports[`priceContract low tier (400-599) — 15% fee 1`] = `
{
  "availableGuaranteeCents": 9000000,
  "feeCents": 45000,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 330000,
}
`;

exports[`priceContract boundary at 800 picks high tier 1`] = `
{
  "availableGuaranteeCents": 4500000,
  "feeCents": 13500,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 150000,
}
`;

exports[`priceContract boundary at 600 picks medium tier 1`] = `
{
  "availableGuaranteeCents": 4500000,
  "feeCents": 18000,
  "oneTimeActivationFeeCents": 15000,
  "totalRentCents": 150000,
}
`;
